cmake_minimum_required (VERSION 2.6)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
set(CURSES_NEED_WIDE TRUE)
project (pacurvolume)
aux_source_directory(src SRC_LIST)
add_executable(pacurvolume ${SRC_LIST})
add_definitions(-std=c++11)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
find_package(PulseAudio REQUIRED)
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
find_package(Curses REQUIRED)
find_library(GPM_LIBRARY NAMES gpm)
find_library(TINFO_LIBRARY NAMES tinfo)
target_link_libraries(pacurvolume ${PULSEAUDIO_LIBRARY} ${CURSES_LIBRARIES} ${TINFO_LIBRARY} ${GPM_LIBRARY})
